Minor fixes on Windows
- Fix sidebar action button icon being misaligned
- Attempt to fix Jest console output line information being mixed up with file path

--- a/src/styles/blocks/sidebar.scss
+++ b/src/styles/blocks/sidebar.scss
@@ -61,6 +61,7 @@
             display: inline-block;
             float: right;
             height: 18px;
+            line-height: 16px;
             margin-right: var(--spacing);
             opacity: .85;
             outline: 0;
